--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -17,14 +17,12 @@
         }
     </style>
 </head>
-
 <body>
     <h1>Olá, Mundo!</h1>
     <p>Já me livrei da maldição.</p>
     <script>
-        window.alert('Olá, Mundo!')
-        window.confirm('Está gostando de Javascript?')
-        window.prompt('Qual é seu nome?')
+        var nome = window.prompt('Qual é seu nome?')
+        window.alert(`É um grande prazer em te conhecer ` + nome + '!')
     </script>
 </body>
 </html>
