:sparkles: - ex016 e ex017 - Resolução

--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -19,7 +19,7 @@
             <input type="submit" value="Gerar Tabuada" onclick="mostrarTabuada()">
         </div>
         <div>
-           <select name="tabuada" id="tabuada" >
+           <select name="tabuada" id="tabuada" size="10">
                 <option value="">Digite um número</option>
            </select>
         </div>
