--- a/aula14ex/ex016/modelo.html
+++ b/aula14ex/ex016/modelo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vamos contar</title>
+    <title>Super Contador</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -33,7 +33,7 @@
             </p>
         </div>
         <div id="res">
-            Preparando a contagem
+            Preparando a contagem...
         </div>
     </section>
 
