:sparkles: - aula 16: Exercícios 18 - Analisador de Números - Resolução

--- a/aula16ex/ex018/modelo.html
+++ b/aula16ex/ex018/modelo.html
@@ -21,7 +21,7 @@
                 <input type="number" name="number" id="number" min="1" max="100">
                 <input type="submit" value="Adicionar" onclick="addNumber()">
             </p>
-            <select name="numeros" id="numeros" size="10" width="200">
+            <select name="numeros" id="numeros" size="10">
             </select>
             <br>
             <input type="submit" id="finalizar" value="Finalizar" onclick="AnalisarNumeros()">
